syntax = "proto3";

option csharp_namespace = "NameFixer.gRPCServices";
import "google/api/annotations.proto";

package namefixer.firstnames;

service FirstNameService {
  rpc GetFirstNameSuggestions (GetFirstNameSuggestionsRequest) returns (GetFirstNameSuggestionsResponse) {
    option (google.api.http) = {
      get: "/FirstNameService/{first_name}"
    };
  }
}

message GetFirstNameSuggestionsRequest {
  string first_name = 1;
}

message GetFirstNameSuggestionsResponse {
  repeated string first_name_suggestions = 1;
}